--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <!-- <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" /> -->
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="/dist/css/main.min.css" />
   </head>
   <body>
     <!-- header -->
@@ -163,7 +163,7 @@
                     </svg>
                   </a>
                 </li>
-                <li class="social-icon__itemn">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
@@ -186,28 +186,28 @@
                 <p class="team-member__position">Frontend Developer</p>
               </div>
               <ul class="social-icon social-icon--team">
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
@@ -223,28 +223,28 @@
                 <p class="team-member__position">Marketing</p>
               </div>
               <ul class="social-icon social-icon--team">
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
@@ -260,28 +260,28 @@
                 <p class="team-member__position">UI Designer</p>
               </div>
               <ul class="social-icon social-icon--team">
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icon__list">
+                <li class="social-icon__item">
                   <a href="#" class="social-icon__link">
                     <svg class="social-icon__svg social-icon__svg--team">
                       <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
@@ -377,28 +377,28 @@
         <div class="footer-social-section">
           <p class="footer-social-section__text">присоединяйтесь</p>
           <ul class="social-icon social-icon--footer">
-            <li class="social-icon__list">
+            <li class="social-icon__item">
               <a href="#" class="social-icon__link social-icon__link--footer">
                 <svg class="social-icon__svg social-icon__svg--footer">
                   <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-icon__list">
+            <li class="social-icon__item">
               <a href="#" class="social-icon__link social-icon__link--footer"
                 ><svg class="social-icon__svg social-icon__svg--footer">
                   <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-icon__list">
+            <li class="social-icon__item">
               <a href="#" class="social-icon__link social-icon__link--footer"
                 ><svg class="social-icon__svg social-icon__svg--footer">
                   <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-icon__list">
+            <li class="social-icon__item">
               <a href="#" class="social-icon__link social-icon__link--footer"
                 ><svg class="social-icon__svg social-icon__svg--footer">
                   <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
