--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     />
     <!-- <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" /> -->
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="/dist/css/main.min.css" />
   </head>
   <body>
     <!-- header -->
@@ -192,28 +192,28 @@
         <div class="footer-social-section">
           <p class="footer-social-section__text">присоединяйтесь</p>
           <ul class="social-icon social-icon--footer">
-            <li class="social-icon__list">
+            <li class="social-icon__item">
               <a href="#" class="social-icon__link social-icon__link--footer">
                 <svg class="social-icon__svg social-icon__svg--footer">
                   <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-icon__list">
+            <li class="social-icon__item">
               <a href="#" class="social-icon__link social-icon__link--footer"
                 ><svg class="social-icon__svg social-icon__svg--footer">
                   <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-icon__list">
+            <li class="social-icon__item">
               <a href="#" class="social-icon__link social-icon__link--footer"
                 ><svg class="social-icon__svg social-icon__svg--footer">
                   <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-icon__list">
+            <li class="social-icon__item">
               <a href="#" class="social-icon__link social-icon__link--footer"
                 ><svg class="social-icon__svg social-icon__svg--footer">
                   <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
